--- a/src/app/reports/map-report/india-map/india-map.component.html
+++ b/src/app/reports/map-report/india-map/india-map.component.html
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-lg-6 col-md-12">
             <div class="shadow p-2" >
-                <div id="bmap" class="esri-map-draw" style="background:#768c9200;"> 
+                <div id="bmap" class="esri-map-draw" style="background:#768c9200; transform: scale(0.8);"> 
                     <div class="loader-center" *ngIf="!showMap">
                         <mat-spinner></mat-spinner>
                     </div>
